--- a/index.html
+++ b/index.html
@@ -172,68 +172,12 @@
               alt="Profile"
               class="rounded-circle"
             />
-            <span class="d-none d-md-block dropdown-toggle ps-2"
+            <span class="d-none d-md-block ps-2"
               >T. Marizu</span
             > </a
           ><!-- End Profile Iamge Icon -->
 
-          <ul
-            class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile"
-          >
-            <li class="dropdown-header">
-              <h6>Tobe Marizu</h6>
-              <span>Fred Dev</span>
-            </li>
-            <li>
-              <hr class="dropdown-divider" />
-            </li>
-
-            <li>
-              <a
-                class="dropdown-item d-flex align-items-center"
-                href="users-profile.html"
-              >
-                <i class="bi bi-person"></i>
-                <span>My Profile</span>
-              </a>
-            </li>
-            <li>
-              <hr class="dropdown-divider" />
-            </li>
-
-            <li>
-              <a
-                class="dropdown-item d-flex align-items-center"
-                href="users-profile.html"
-              >
-                <i class="bi bi-gear"></i>
-                <span>Account Settings</span>
-              </a>
-            </li>
-            <li>
-              <hr class="dropdown-divider" />
-            </li>
-
-            <li>
-              <a
-                class="dropdown-item d-flex align-items-center"
-                href="pages-faq.html"
-              >
-                <i class="bi bi-question-circle"></i>
-                <span>Need Help?</span>
-              </a>
-            </li>
-            <li>
-              <hr class="dropdown-divider" />
-            </li>
-
-            <li>
-              <a class="dropdown-item d-flex align-items-center" href="#">
-                <i class="bi bi-box-arrow-right"></i>
-                <span>Sign Out</span>
-              </a>
-            </li>
-          </ul>
+          
           <!-- End Profile Dropdown Items -->
         </li>
         <!-- End Profile Nav -->
