--- a/lecturers.html
+++ b/lecturers.html
@@ -421,47 +421,58 @@
                       </tr>
                   </thead>
                   <tbody id="tableBody">
-                      <tr class="mb-5">
-                          <td><img src="assets/img/Avatar.png" class="lecturer-img"> Dr Henry Ohims</td>
-                          <td>Droyim@funai.edu</td>
-                          <td>09067453211</td>
-                          <td>3</td>
-                          <td>2025-01-22 • 2:30pm</td>
-                          <td><i class="bi bi-three-dots-vertical"></i></td>
-                      </tr>
-                      <tr>
-                          <td><img src="assets/img/Avatar.png" class="lecturer-img"> Dr Henry Ohims</td>
-                          <td>Lindak@funai.edu</td>
-                          <td>08123456789</td>
-                          <td>4</td>
-                          <td>2025-01-18 • 1:10pm</td>
-                          <td><i class="bi bi-three-dots-vertical"></i></td>
-                      </tr>
-                      <tr>
-                          <td><img src="assets/img/Avatar.png" class="lecturer-img"> Dr Henry Ohims</td>
-                          <td>johnd@funai.edu</td>
-                          <td>08099887766</td>
-                          <td>2</td>
-                          <td>2025-02-02 • 11:45am</td>
-                          <td><i class="bi bi-three-dots-vertical"></i></td>
-                      </tr>
-                      <tr>
-                          <td><img src="assets/img/Avatar.png" class="lecturer-img"> Dr Henry Ohims</td>
-                          <td>gracea@funai.edu</td>
-                          <td>07034567891</td>
-                          <td>5</td>
-                          <td>2025-01-15 • 4:00pm</td>
-                          <td><i class="bi bi-three-dots-vertical"></i></td>
-                      </tr>
-                      <tr>
-                          <td><img src="assets/img/Avatar.png" class="lecturer-img"> Dr Henry Ohims</td>
-                          <td>samueln@funai.edu</td>
-                          <td>08111223344</td>
-                          <td>3</td>
-                          <td>2025-02-01 • 3:20pm</td>
-                          <td><i class="bi bi-three-dots-vertical"></i></td>
-                      </tr>
-                  </tbody>
+                    <tr class="mb-5">
+                        <td class="d-flex align-items-center">
+                            <img src="assets/img/Avatar.png" class="lecturer-img me-2"> Dr Henry Ohims
+                        </td>
+                        <td>Droyim@funai.edu</td>
+                        <td>09067453211</td>
+                        <td>3</td>
+                        <td>2025-01-22 • 2:30pm</td>
+                        <td><i class="bi bi-three-dots-vertical"></i></td>
+                    </tr>
+                    <tr>
+                        <td class="d-flex align-items-center">
+                            <img src="assets/img/Avatar.png" class="lecturer-img me-2"> Dr Henry Ohims
+                        </td>
+                        <td>Lindak@funai.edu</td>
+                        <td>08123456789</td>
+                        <td>4</td>
+                        <td>2025-01-18 • 1:10pm</td>
+                        <td><i class="bi bi-three-dots-vertical"></i></td>
+                    </tr>
+                    <tr>
+                        <td class="d-flex align-items-center">
+                            <img src="assets/img/Avatar.png" class="lecturer-img me-2"> Dr Henry Ohims
+                        </td>
+                        <td>johnd@funai.edu</td>
+                        <td>08099887766</td>
+                        <td>2</td>
+                        <td>2025-02-02 • 11:45am</td>
+                        <td><i class="bi bi-three-dots-vertical"></i></td>
+                    </tr>
+                    <tr>
+                        <td class="d-flex align-items-center">
+                            <img src="assets/img/Avatar.png" class="lecturer-img me-2"> Dr Henry Ohims
+                        </td>
+                        <td>gracea@funai.edu</td>
+                        <td>07034567891</td>
+                        <td>5</td>
+                        <td>2025-01-15 • 4:00pm</td>
+                        <td><i class="bi bi-three-dots-vertical"></i></td>
+                    </tr>
+                    <tr>
+                        <td class="d-flex align-items-center">
+                            <img src="assets/img/Avatar.png" class="lecturer-img me-2"> Dr Henry Ohims
+                        </td>
+                        <td>samueln@funai.edu</td>
+                        <td>08111223344</td>
+                        <td>3</td>
+                        <td>2025-02-01 • 3:20pm</td>
+                        <td><i class="bi bi-three-dots-vertical"></i></td>
+                    </tr>
+                </tbody>
+                
               </table>
               
               <div class="d-flex justify-content-between">
@@ -482,7 +493,6 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">New Course</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
