--- a/department.html
+++ b/department.html
@@ -456,7 +456,7 @@
         <!-- End Department Page Nav -->
 
         <li class="nav-items">
-          <a class="nav-links collapsed" href="">
+          <a class="nav-links collapsed" href="register.html">
             <i class="bi bi-box-arrow-right"></i>
             <span>logout</span>
           </a>
