--- a/lecturers.html
+++ b/lecturers.html
@@ -102,16 +102,16 @@
         background-color: #24AA4E;
         text-decoration: none;
         color: #fff;
-        padding: 8px 10px;
+        padding: 10px 10px;
         border-radius: 10px;
-        font-size: 20px; /* Controls button text size */
+        font-size: 15px; /* Controls button text size */
         border: none;
         display: flex;
         align-items: center;
     }
   
     .bigger-icon {
-        font-size: 25px; /* Adjust icon size */
+        font-size: 18px; /* Adjust icon size */
     }
       .search-bar {
         display: flex;
@@ -304,7 +304,7 @@
         <!-- End Department Page Nav -->
 
         <li class="nav-items">
-          <a class="nav-links collapsed" href="">
+          <a class="nav-links collapsed" href="register.html">
             <i class="bi bi-box-arrow-right"></i>
             <span>logout</span>
           </a>
@@ -422,18 +422,30 @@
                   </thead>
                   <tbody id="tableBody">
                     <tr class="mb-5">
-                        <td class="d-flex align-items-center">
-                            <img src="assets/img/Avatar.png" class="lecturer-img me-2"> Dr Henry Ohims
-                        </td>
-                        <td>Droyim@funai.edu</td>
-                        <td>09067453211</td>
-                        <td>3</td>
-                        <td>2025-01-22 • 2:30pm</td>
-                        <td><i class="bi bi-three-dots-vertical"></i></td>
-                    </tr>
+                      <td class="d-flex align-items-center gap-2">
+                          <img src="assets/img/Avatar.png" class="lecturer-img" alt="Lecturer" style="width: 40px; height: 40px; border-radius: 50%;">
+                          <div>
+                              <p class="mb-0 text-muted small">
+                                  <a href="view-lecturers.html" class="text-decoration-none text-muted">Dr Henry Ohims</a>
+                              </p>
+                          </div>
+                      </td>
+                      <td>Droyim@funai.edu</td>
+                      <td>09067453211</td>
+                      <td>3</td>
+                      <td>2025-01-22 • 2:30pm</td>
+                      <td><i class="bi bi-three-dots-vertical"></i></td>
+                  </tr>
+                  
+                  
                     <tr>
                         <td class="d-flex align-items-center">
-                            <img src="assets/img/Avatar.png" class="lecturer-img me-2"> Dr Henry Ohims
+                            <img src="assets/img/Avatar.png" class="lecturer-img me-2"> 
+                            <div>
+                              <p class="mb-0 text-muted small">
+                                  <a href="view-lecturers.html" class="text-decoration-none text-muted">Dr Henry Ohims</a>
+                              </p>
+                          </div>
                         </td>
                         <td>Lindak@funai.edu</td>
                         <td>08123456789</td>
@@ -443,7 +455,12 @@
                     </tr>
                     <tr>
                         <td class="d-flex align-items-center">
-                            <img src="assets/img/Avatar.png" class="lecturer-img me-2"> Dr Henry Ohims
+                            <img src="assets/img/Avatar.png" class="lecturer-img me-2">
+                            <div>
+                              <p class="mb-0 text-muted small">
+                                  <a href="view-lecturers.html" class="text-decoration-none text-muted">Dr Henry Ohims</a>
+                              </p>
+                          </div>
                         </td>
                         <td>johnd@funai.edu</td>
                         <td>08099887766</td>
@@ -453,7 +470,12 @@
                     </tr>
                     <tr>
                         <td class="d-flex align-items-center">
-                            <img src="assets/img/Avatar.png" class="lecturer-img me-2"> Dr Henry Ohims
+                            <img src="assets/img/Avatar.png" class="lecturer-img me-2"> 
+                            <div>
+                              <p class="mb-0 text-muted small">
+                                  <a href="view-lecturers.html" class="text-decoration-none text-muted">Dr Henry Ohims</a>
+                              </p>
+                          </div>
                         </td>
                         <td>gracea@funai.edu</td>
                         <td>07034567891</td>
@@ -463,7 +485,12 @@
                     </tr>
                     <tr>
                         <td class="d-flex align-items-center">
-                            <img src="assets/img/Avatar.png" class="lecturer-img me-2"> Dr Henry Ohims
+                            <img src="assets/img/Avatar.png" class="lecturer-img me-2"> 
+                            <div>
+                              <p class="mb-0 text-muted small">
+                                  <a href="view-lecturers.html" class="text-decoration-none text-muted">Dr Henry Ohims</a>
+                              </p>
+                          </div>
                         </td>
                         <td>samueln@funai.edu</td>
                         <td>08111223344</td>
